--- a/myCss.css
+++ b/myCss.css
@@ -5,7 +5,7 @@ div{
     padding-left: 20px;
 }
 .imgMe{
-    background-image: url("img2.jpeg");
+    background-image: url("homeIMG/img2.jpeg");
     background-size: 295px;  
 }
 ul{
