--- a/movies.css
+++ b/movies.css
@@ -55,7 +55,7 @@ img{
    display: inline-block;
      
 }
-#comment{
+.comments{
     margin-bottom: 20pt; 
     margin-top: 10px;
     font-style: italic;
