--- a/movies.css
+++ b/movies.css
@@ -23,6 +23,10 @@ body{
     color: red;
     vertical-align: middle;
     font-weight: bold;  
+    display: inline-block;
+    width: 56.5%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 img{
     vertical-align: middle;
