--- a/ascii.css
+++ b/ascii.css
@@ -1,7 +1,9 @@
-/* body{
+body{
     background-color: #CCCCFF;
     font-family: sans-serif;
-    font: 14pt bold;
+    font-size: 14pt;
+    font-weight: bold;
+    text-align: center;
 }
 header{
     font: 32pt bold;
@@ -11,60 +13,22 @@ header{
 textarea{
     text-align: center;
     width: 90%;
-    height: 400px;
+    height: 600px;
     font: 12pt bold;
     font-family: monospace;
+    margin:0% 50px 0% 50px;
 }
 fieldset{
     border: 5px black solid;
-    display: inline-block;
-} */
-.container
-{
-    width: 960px;
-    margin: 0 auto;
+    display: inline;
 }
-
-#text-area{
-	font-family: monospace;
-    font-size: 12pt;
-	width: 100%;
-    overflow-y: scroll;
-    height: 600px;
-    resize: none;
-}
-
-fieldset{
-     border: 5px solid black;
-     display: inline;
-}
-legend {
-   text-align: left;
-}
-
 button{
     width: 47%;
 }
-body{
-    font-weight: bold;
-    text-align: center;
-    margin-left: auto;
-    margin-right:auto;
-    background-color:#CCCCFF;
-    font-family: sans-serif;
-    font-size: 14pt;
-   
-}
-header{
-    font-size: 32pt;
-    font-weight: bold;
-    margin:0px;
-    
-}
 select{
-    width:98%;
+    width:100%;
 }
-#validate{
+.w3{
     right:0px;
     bottom: 20px;
     right: 5px;
