--- a/selu.css
+++ b/selu.css
@@ -1,5 +1,5 @@
 body,button {
-    font-family: 'Poem Letters Serif', sans-serif;
+    font-family: 'Poem Letters Serif', cursive;
     font-size: 25pt;
     text-align: center;
     letter-spacing: 2px;
