--- a/project/dict.css
+++ b/project/dict.css
@@ -1,13 +1,28 @@
+h1{
+  font-family: cursive;
+  font-size: 50px;
+  word-spacing: 10px;
+}
 
-
-
-  .footer{
-    position: absolute;
+.footer {
+  column-count: 3;
+  column-gap: 40px;
+  background-color: red;
+  padding-left: 20px;
+  border-radius: 15px;
+  width: 98%;
+  position: relative;
   bottom: 0;
-  width: 100%;
-  height: 2.5rem
-  }
-.main{
-    width: 300px;
-    height: 500px;
+
+}
+body{
+  background-color: #ffe042;
+}
+fieldset{
+  color: white;
+  border: 4px solid ;
+  border-radius: 15px;
+  background: rgb(0, 89, 59);
+  font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
